# vigil

./: .gitignore  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  PHASE12_RELEASE_NOTES.md  README.md  ROADMAP.md  SECURITY.md  build.rs  build.sh  justfile  openssf-ui-clean-split.patch  osv-scanner.toml  response-rules.example.yaml
.clusterfuzzlite/: Dockerfile  build.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: artifact-hygiene.yml  auto-release.yml  cflite_pr.yml  ci.yml  codeql.yml  dependency-review.yml  fix-pr115-fmt.yml  fix-pr115-review.yml  generator-generic-ossf-slsa3-publish.yml  ossf-scorecard.yml  publish-crates.yml  publish-ghcr.yml  release.yml  secret-scan.yml  snyk-open-source.yml
docs/: ADVISORY-SOURCE-COMPLIANCE.md  CODEBASES.md  DEPENDENCIES.md  LOCAL-STORAGE-MIGRATION.md  OPENSSF-BEST-PRACTICES.md  SUPPORTED-PLATFORMS.md  USER-GUIDE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_client_hello.rs
installer/linux/: AppRun  vigil.desktop
installer/macos/: Info.plist
installer/windows/: setup.iss
packaging/ghcr/: Dockerfile
scripts/: generate_release_notes.py  normalize_update_signing_key.py  prepare_release.py  test_generate_release_notes.py  test_normalize_update_signing_key.py  test_prepare_release.py
src/: active_response.rs  advisory.rs  advisory_history.rs  advisory_ncsc_bsi.rs  advisory_public_sources.rs  advisory_status.rs  artifact_provenance.rs  audit.rs  auto_response.rs  autostart.rs  baseline.rs  beacon.rs  blocklist.rs  break_glass.rs  config.rs  detection_depth.rs  entropy.rs  forensics.rs  fswatch.rs  geoip.rs  honeypot.rs  logger.rs  longlived.rs  main.rs  notifier.rs  pcap.rs  quarantine.rs  registry.rs  response_rules.rs  revdns.rs  score.rs  service.rs  session.rs  software_inventory.rs  startup_integrity.rs  tamper.rs  tls.rs  tls_artifacts.rs  tray.rs  types.rs
src/monitor/: ebpf.rs  ebpf_bytecode.rs  ebpf_tcp_state.bpf.c  etw.rs  mod.rs  poll.rs
src/platform/: autostart.rs  break_glass.rs  command_paths.rs  mod.rs  service.rs  tray.rs
src/process/: mod.rs  publisher.rs
src/security/: active_response.rs  active_response_platform.rs  file_quarantine.rs  integrity.rs  mod.rs  operator_provenance.rs  policy.rs  quarantine.rs  registry.rs  response_rules.rs  update.rs
src/storage/: mod.rs
src/ui/: activity.rs  alerts.rs  help.rs  inspector.rs  mod.rs  process_list.rs  process_list_fast.rs  settings.rs  tab_bar.rs  theme.rs  uninstall.rs
src/ui/settings/: draft.rs  uninstall.rs
stubs/gtk/: Cargo.toml  lib.rs
stubs/libappindicator/: Cargo.toml
tests/: break_glass_fail_open_routing.rs
