[package]
name        = "vigil"
version     = "1.3.6"edition     = "2021"
description = "Real-time network threat monitor"
license     = "MIT"
authors     = []

[[bin]]
name = "vigil"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
egui        = "0.34"
eframe      = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "persistence"] }
notify-rust = "4"
image = { version = "0.25", default-features = false, features = ["bmp", "ico", "png"] }
sysinfo = "0.38"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
single-instance = "0.3"
ed25519-dalek = { version = "2", features = ["std"] }
base64 = "0.22"
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
tracing-appender    = "0.2"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
dashmap = "6"
auto-launch = "0.6.0"
maxminddb = "0.27"
notify = "8"
dns-lookup = "3"
ipnetwork = "0.21"
libc = "0.2"
hmac = "0.13"
sha2 = "0.11"
getrandom = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Time",
    "Win32_System_Services",
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Foundation",
    "UI_Notifications",
    "Data_Xml_Dom",
] }
winreg = "0.56"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow", "persistence", "wayland", "x11"] }
aya = "0.13"
bytes = "1"
ksni = { version = "0.3", default-features = false, features = ["blocking", "tokio"] }

[target.'cfg(target_os = "linux")'.build-dependencies]

[build-dependencies]
png = "0.18"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Strip the gtk3 / glib 0.18 chain from Cargo.lock.
#
# `tray-icon` declares `libappindicator` as a hard `cfg(linux)` dependency in
# its own Cargo.toml (not behind a feature flag). Cargo's resolver records
# target-specific transitive deps in Cargo.lock regardless of the build target,
# so even though we never use tray-icon on Linux (we use ksni), libappindicator
# and its glib/gtk 0.18 subtree would still appear in the lockfile and trip
# Dependabot on GHSA-wrw7-89jp-8q8g (unsound glib::VariantStrIter).
#
# The stub below is an empty crate with zero dependencies. tray-icon only
# references `libappindicator` from `#[cfg(all(unix, not(target_os = "macos")))]`
# blocks, which don't compile on Windows or macOS, so the stub's body is never
# referenced. On Linux `tray-icon` isn't pulled in at all. Net effect:
# glib/gtk/libappindicator disappear from Cargo.lock without changing any
# compiled behavior.
[patch.crates-io]
libappindicator = { path = "stubs/libappindicator" }
gtk             = { path = "stubs/gtk" }

[workspace.metadata.dist]
cargo-dist-version = "0.22.1"
ci                 = "github"
installers         = ["shell", "powershell", "msi"]
targets            = [
    "x86_64-pc-windows-msvc",
    "aarch64-apple-darwin",
    "x86_64-unknown-linux-gnu",
]
pr-run-mode        = "skip"

[profile.dev]
opt-level = 0
debug     = true

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = true
